--- a/ufs.html
+++ b/ufs.html
@@ -196,21 +196,18 @@
     </nav>
 
     <!-- Secondary Navbar (Centered Links) -->
-     <nav class="navbar secondary-navbar p-20">
-        <div class="container-fluid">
-            <div class="nav-links">
-                <a href="#" class="nav-item">Home</a>
-                <a href="#" class="nav-item">About</a>
-                <a href="#" class="nav-item">Equipments</a>
-                <a href="#" class="nav-item">Services</a>
-                <a href="#" class="nav-item">Parts</a>
-                <a href="#" class="nav-item">Rental</a>
-                <a href="#" class="nav-item">E-books</a>
-                <a href="#" class="nav-item">Contact</a>
-                <a href="#" class="nav-item">Blog</a>
-            </div>
-        </div>
-    </nav>
+    <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Equipments</a>
+        <a href="#">Services</a>
+        <a href="#">Parts</a>
+        <a href="#">Rentals</a>
+        <a href="#">E-books</a>
+        <a href="#">Contacts</a>
+        <a href="#">Blog</a>
+    </div>
+
 
     <!-- Main Content -->
     <div class="container mt-4">
