--- a/ufs.html
+++ b/ufs.html
@@ -195,19 +195,19 @@
         </div>
     </nav>
 
-    <!-- Secondary Navbar (Centered Links) -->
-    <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Equipments</a>
-        <a href="#">Services</a>
-        <a href="#">Parts</a>
-        <a href="#">Rentals</a>
-        <a href="#">E-books</a>
-        <a href="#">Contacts</a>
-        <a href="#">Blog</a>
+    <div class="container-fluid">
+            <div class="nav-links">
+                <a href="#" class="nav-item">Home</a>
+                <a href="#" class="nav-item">About</a>
+                <a href="#" class="nav-item">Equipments</a>
+                <a href="#" class="nav-item">Services</a>
+                <a href="#" class="nav-item">Parts</a>
+                <a href="#" class="nav-item">Rental</a>
+                <a href="#" class="nav-item">E-books</a>
+                <a href="#" class="nav-item">Contact</a>
+                <a href="#" class="nav-item">Blog</a>
+            </div>
     </div>
-
 
     <!-- Main Content -->
     <div class="container mt-4">
