--- a/ufs.html
+++ b/ufs.html
@@ -241,11 +241,11 @@
                 <!-- Categories Section -->
                 <div class="product-links mt-4">
                     <h3>Categories</h3>
-                    <a href="#">Engine Components   ></a>
-                    <a href="#">Transmission Parts ></a>
-                    <a href="#">Electrical Components  ></a>
-                    <a href="#">Brake Systems   ></a>
-                    <a href="#">Tires & Wheels ></a>
+                    <a class="text-dark" href="#">Engine Components   ></a>
+                    <a  class="text-dark"href="#">Transmission Parts ></a>
+                    <a class="text-dark" href="#">Electrical Components  ></a>
+                    <a class="text-dark" href="#">Brake Systems   ></a>
+                    <a class="text-dark" href="#">Tires & Wheels ></a>
                 </div>
                 <div class="card">
                     <img src="img.png" class="card-img-top" alt="product-image">
@@ -265,7 +265,7 @@
                     <div class="mb-4">
                         <label for="sortBy" class="form-label">Sort By:</label>
                         <select class="form-select" id="sortBy">
-                            <option value="latest">Latest</option>
+                            <option value="latest">Latest<span> </span> <span> </span 1-8 Results</option>
                             <option value="priceHighToLow">Lowest</option>
                         </select>
                     </div>
@@ -343,7 +343,19 @@
             </div>
         </div>
     </div>
-
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center mt-4">
+            <li class="page-item active bg-dark">
+                <a class="page-link bg-dark" href="#">1</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link active bg-light text-dark" href="#">2</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link outline-dark" href="#">></a>
+            </li>
+        </ul>
+    </nav>
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 mt-5">
         <div class="container">
